unpackaged/main/default/objects/Activity/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Identifies the type of generic task.</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>