unpackaged/main/default/objects/Activity/fields/Answered_At__c.field-meta.xml
<CustomField>
    <fullName>Answered_At__c</fullName>
    <inlineHelpText>Identifies the time when the call was answered.</inlineHelpText>
    <label>Answered At</label>
    <type>DateTime</type>
</CustomField>