unpackaged/main/default/objects/Activity/fields/Assigned_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Is_Active__c</fullName>
    <description>R165435</description>
    <formula>Owner:User.IsActive = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Is Active</label>
    <type>Checkbox</type>
</CustomField>