unpackaged/main/default/objects/Activity/fields/Assigned_to_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Role__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Role</label>
    <type>Text</type>
</CustomField>