unpackaged/main/default/objects/Activity/fields/Attributable_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Sequence_ID__c</fullName>
    <inlineHelpText>Stores the ID of the Sequence.</inlineHelpText>
    <label>Attributable Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>