unpackaged/main/default/objects/Activity/fields/Attributable_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Attributable_Sequence_Name__c</fullName>
    <inlineHelpText>Outreach will attribute a task to the most recently finished sequence if the task is not associated with an active Sequence.</inlineHelpText>
    <label>Attributable Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>