unpackaged/main/default/objects/Activity/fields/Bounced_At__c.field-meta.xml
<CustomField>
    <fullName>Bounced_At__c</fullName>
    <inlineHelpText>Identifies the date and time an email bounced.</inlineHelpText>
    <label>Bounced At</label>
    <type>DateTime</type>
</CustomField>