unpackaged/main/default/objects/Activity/fields/call_date__c.field-meta.xml
<CustomField>
    <fullName>call_date__c</fullName>
    <description>R177059</description>
    <label>Contivio Call Date</label>
    <type>DateTime</type>
</CustomField>