unpackaged/main/default/objects/Activity/fields/Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>Call_Direction__c</fullName>
    <inlineHelpText>Identifies if the call was inbound or outbound.</inlineHelpText>
    <label>Call Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>