unpackaged/main/default/objects/Activity/fields/Call_Disposition_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_Name__c</fullName>
    <inlineHelpText>Identifies the call disposition name as created by the Outreach Admin.</inlineHelpText>
    <label>Call Disposition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>