unpackaged/main/default/objects/Activity/fields/Call_Purpose_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose_Name__c</fullName>
    <inlineHelpText>Identifies the purpose of the call as set by the Outreach Admin.</inlineHelpText>
    <label>Call Purpose Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>