unpackaged/main/default/objects/Activity/fields/Click_Count__c.field-meta.xml
<CustomField>
    <fullName>Click_Count__c</fullName>
    <inlineHelpText>Identifies the total number of clicks the email received.</inlineHelpText>
    <label>Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>