unpackaged/main/default/objects/Activity/fields/Clicked_At__c.field-meta.xml
<CustomField>
    <fullName>Clicked_At__c</fullName>
    <inlineHelpText>Identifies the date and time the first click was captured for the communication.</inlineHelpText>
    <label>Clicked At</label>
    <type>DateTime</type>
</CustomField>