unpackaged/main/default/objects/Activity/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Task was completed.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>