unpackaged/main/default/objects/Activity/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <inlineHelpText>Identifies the date and time an answered call was completed.</inlineHelpText>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>