unpackaged/main/default/objects/Activity/fields/Completer_Id__c.field-meta.xml
<CustomField>
    <fullName>Completer_Id__c</fullName>
    <inlineHelpText>Identifies the Outreach User ID of the user that completed the task.</inlineHelpText>
    <label>Completer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>