unpackaged/main/default/objects/Activity/fields/Completer_Name__c.field-meta.xml
<CustomField>
    <fullName>Completer_Name__c</fullName>
    <inlineHelpText>Identifies the name of the Outreach users that completed the task.</inlineHelpText>
    <label>Completer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>