unpackaged/main/default/objects/Activity/fields/Custom_Template__c.field-meta.xml
<CustomField>
    <fullName>Custom_Template__c</fullName>
    <inlineHelpText>Users can access advanced settings and add custom values such as variables to sync to the CRM.</inlineHelpText>
    <label>Custom Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>