unpackaged/main/default/objects/Activity/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <inlineHelpText>Identifies the date and time the email was delivered.</inlineHelpText>
    <label>Delivered At</label>
    <type>DateTime</type>
</CustomField>