unpackaged/main/default/objects/Activity/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <inlineHelpText>Identifies if the date and time the task is due.</inlineHelpText>
    <label>Due At</label>
    <type>DateTime</type>
</CustomField>