unpackaged/main/default/objects/Activity/fields/Follow_Up_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Sequence_ID__c</fullName>
    <inlineHelpText>Identifies the Follow Up Sequence ID if applicable. 
Note: Only applicable if a Follow Up Sequence is used.</inlineHelpText>
    <label>Follow Up Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>