unpackaged/main/default/objects/Activity/fields/Follow_Up_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Sequence_Name__c</fullName>
    <inlineHelpText>Identifies the Follow up Sequence Name, if applicable.
Note: Only applicable if a Follow Up Sequence is used.</inlineHelpText>
    <label>Follow Up Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>