unpackaged/main/default/objects/Activity/fields/Follow_Up_Sequence_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Sequence_Starting_Date__c</fullName>
    <inlineHelpText>Identifies the date and time the first step of a Follow Up Sequence was initiated. 
Note: Only applicable if a Follow Up Sequence is used.</inlineHelpText>
    <label>Follow Up Sequence Starting Date</label>
    <type>DateTime</type>
</CustomField>