unpackaged/main/default/objects/Activity/fields/Follow_Up_Task_Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Scheduled_At__c</fullName>
    <inlineHelpText>Identifies when a follow up task is due, if applicable. 
Note: Only applicable if a follow up task is used.</inlineHelpText>
    <label>Follow Up Task Scheduled At</label>
    <type>DateTime</type>
</CustomField>