unpackaged/main/default/objects/Activity/fields/Follow_Up_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task_Type__c</fullName>
    <inlineHelpText>What type of follow up task is being used? (No reply or create a follow up task regardless.)</inlineHelpText>
    <label>Follow Up Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>