unpackaged/main/default/objects/Activity/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <inlineHelpText>Identifies the number the call was dialed from.</inlineHelpText>
    <label>From</label>
    <type>Phone</type>
</CustomField>