unpackaged/main/default/objects/Activity/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <inlineHelpText>Identifies the mailing ID used for the communication.</inlineHelpText>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>