unpackaged/main/default/objects/Activity/fields/Is_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Is_Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <type>Checkbox</type>
</CustomField>