unpackaged/main/default/objects/Activity/fields/Mailbox_Source_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Source_Email_Address__c</fullName>
    <inlineHelpText>Identifies the Outreach user&#39;s email address used to deliver the email.</inlineHelpText>
    <label>Mailbox Source Email Address</label>
    <type>Email</type>
</CustomField>