unpackaged/main/default/objects/Activity/fields/Marked_As_Spam_At__c.field-meta.xml
<CustomField>
    <fullName>Marked_As_Spam_At__c</fullName>
    <inlineHelpText>If your Internet Service Provider (ISP) detects the mailing as spam, Outreach pushes the time stamp that is provided by the ISP.</inlineHelpText>
    <label>Marked As Spam At</label>
    <type>DateTime</type>
</CustomField>