unpackaged/main/default/objects/Activity/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <inlineHelpText>Identifies the Message ID associated with the email.</inlineHelpText>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>