unpackaged/main/default/objects/Activity/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <externalId>true</externalId>
    <label>MyCase ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>