unpackaged/main/default/objects/Activity/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <inlineHelpText>Identifies any call notes added to the call when logged.</inlineHelpText>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>