unpackaged/main/default/objects/Activity/fields/Open_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Count__c</fullName>
    <inlineHelpText>Identifies the total number of opens the email received.</inlineHelpText>
    <label>Open Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>