unpackaged/main/default/objects/Activity/fields/Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Opened_At__c</fullName>
    <inlineHelpText>Identifies the date and time the email was first opened.</inlineHelpText>
    <label>Opened At</label>
    <type>DateTime</type>
</CustomField>