unpackaged/main/default/objects/Activity/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Identifies the name of the opportunity based on the Outreach integration.</inlineHelpText>
    <label>Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>