unpackaged/main/default/objects/Activity/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <inlineHelpText>Identifies task owner&#39;s name</inlineHelpText>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>