unpackaged/main/default/objects/Activity/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <inlineHelpText>Identifies the Prospect&#39;s name.</inlineHelpText>
    <label>Prospect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>