unpackaged/main/default/objects/Activity/fields/Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Recording_URL__c</fullName>
    <inlineHelpText>Identifies the Twilio Recording URL if applicable.
Note: The applicable Salesforce field must be added to Salesforce in order to correctly map this field in Outreach.</inlineHelpText>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>