unpackaged/main/default/objects/Activity/fields/Replied_At__c.field-meta.xml
<CustomField>
    <fullName>Replied_At__c</fullName>
    <inlineHelpText>Identifies the date and time when the mail was replied to.</inlineHelpText>
    <label>Replied At</label>
    <type>DateTime</type>
</CustomField>