unpackaged/main/default/objects/Activity/fields/Retain_Recording__c.field-meta.xml
<CustomField>
    <fullName>Retain_Recording__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if a user wants to retain the recording after a call was made.</inlineHelpText>
    <label>Retain Recording</label>
    <type>Checkbox</type>
</CustomField>