unpackaged/main/default/objects/Activity/fields/Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_At__c</fullName>
    <inlineHelpText>Identifies when the email was scheduled to be delivered.</inlineHelpText>
    <label>Scheduled At</label>
    <type>DateTime</type>
</CustomField>