unpackaged/main/default/objects/Activity/fields/Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Sequence_ID__c</fullName>
    <inlineHelpText>Identifies the ID of the sequence the cal task was initiated from.</inlineHelpText>
    <label>Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>