unpackaged/main/default/objects/Activity/fields/Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Name__c</fullName>
    <inlineHelpText>Identifies the name of the Sequence that generated the task.</inlineHelpText>
    <label>Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>