unpackaged/main/default/objects/Activity/fields/Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Step_Number__c</fullName>
    <inlineHelpText>Identifies the step number of the Sequence.</inlineHelpText>
    <label>Sequence Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>