unpackaged/main/default/objects/Activity/fields/Should_Record_Call__c.field-meta.xml
<CustomField>
    <fullName>Should_Record_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Outreach users opted to record the call prior to connecting with the Prospect.</inlineHelpText>
    <label>Should Record Call</label>
    <type>Checkbox</type>
</CustomField>