unpackaged/main/default/objects/Activity/fields/State_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>State_Changed_At__c</fullName>
    <inlineHelpText>Identifies the date and time when the call state was last changed.</inlineHelpText>
    <label>State Changed At</label>
    <type>DateTime</type>
</CustomField>