unpackaged/main/default/objects/Activity/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <inlineHelpText>Identifies the task category</inlineHelpText>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Meet in Person</fullName>
            </value>
            <value>
                <fullName>Action Item</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>LinkedIn: View a Profile</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Send Message</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Send Connection Request</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Interact with Post</fullName>
            </value>
            <value>
                <fullName>LinkedIn: Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>