unpackaged/main/default/objects/Activity/fields/Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Task_Priority__c</fullName>
    <inlineHelpText>Identifies the priority of a task as defined by the user: low, medium, or high.</inlineHelpText>
    <label>Task Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>