unpackaged/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <inlineHelpText>Identifies if a task was created by a sequence or by manual user input, as well as the type of task (i.e. email, task, etc.)</inlineHelpText>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sequence_step_task</fullName>
            </value>
            <value>
                <fullName>sequence_step_call</fullName>
            </value>
            <value>
                <fullName>sequence_step_linkedin_send_message</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>