unpackaged/main/default/objects/Activity/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <inlineHelpText>Identifies the Template ID of a template sent with the email. 
Note: Only applicable if using a template.</inlineHelpText>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>