unpackaged/main/default/objects/Activity/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <inlineHelpText>Identifies the Template Name of a template sent with the email. 
Note: Only applicable if using a template.</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>