unpackaged/main/default/objects/Activity/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <inlineHelpText>Identifies the number the call was placed to.</inlineHelpText>
    <label>To</label>
    <type>Phone</type>
</CustomField>