unpackaged/main/default/objects/Activity/fields/Track_Links__c.field-meta.xml
<CustomField>
    <fullName>Track_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if click-tracking is enabled for this communication.</inlineHelpText>
    <label>Track Links</label>
    <type>Checkbox</type>
</CustomField>