unpackaged/main/default/objects/Activity/fields/Track_Opens__c.field-meta.xml
<CustomField>
    <fullName>Track_Opens__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if open-tracking is enabled for this communication.</inlineHelpText>
    <label>Track Opens</label>
    <type>Checkbox</type>
</CustomField>