unpackaged/main/default/objects/Activity/fields/Unsubscribed_At__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_At__c</fullName>
    <inlineHelpText>Identifies the date and time when the Prospect unsubscribed to this communication.</inlineHelpText>
    <label>Unsubscribed At</label>
    <type>DateTime</type>
</CustomField>