unpackaged/main/default/objects/Activity/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <inlineHelpText>Identifies the Outreach user that sent the email.</inlineHelpText>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>