unpackaged/main/default/objects/Activity/fields/User_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Call_Type__c</fullName>
    <inlineHelpText>Identifies the method used to initiate the call: VOIP (Computer-based) or Bridge (Phone).</inlineHelpText>
    <label>User Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>